bdr.BDR2.scala.error
Compilation error:
BDR2:7: error: not found: value R
  case R => right(); forward();
       ^BDR2:8: error: not found: value L
  case L => left();  forward();
       ^BDR2:9: error: not found: value I
  case I => left(); left(); forward();
       ^BDR2:10: error: not found: value A
  case A =>  forward();
       ^BDR2:11: error: not found: value B
  case B => forward(); forward();
       ^BDR2:12: error: not found: value C
  case C => forward(); forward(); forward();
       ^BDR2:13: error: not found: value D
  case D => forward(); forward(); forward(); forward();
       ^BDR2:14: error: not found: value E
  case E => forward(); forward(); forward(); forward(); forward();
       ^BDR2:15: error: not found: value F
  case F => forward(); forward(); forward(); forward(); forward(); forward();
       ^BDR2:16: error: not found: value Z
  case Z =>  backward();
       ^BDR2:17: error: not found: value Y
  case Y =>  backward(); backward();
       ^BDR2:18: error: not found: value X
  case X =>  backward(); backward();backward();
       ^BDR2:19: error: not found: value W
  case W =>  backward();backward();backward();backward();
       ^BDR2:20: error: not found: value V
  case V =>  backward();backward();backward();backward();backward();
       ^BDR2:21: error: not found: value U
  case U =>  backward();backward();backward();backward();backward();backward();
       ^